parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM
Rule 2     PROGRAM -> PROGRAM INSTRUCTION
Rule 3     PROGRAM -> INSTRUCTION
Rule 4     INSTRUCTION -> STATEMENT SEMICOLON
Rule 5     INSTRUCTION -> IF_STATEMENT
Rule 6     INSTRUCTION -> WHILE_STATEMENT
Rule 7     INSTRUCTION -> FOR_STATEMENT
Rule 8     STATEMENT -> ASSIGNMENT
Rule 9     STATEMENT -> KEYWORD
Rule 10    ASSIGNMENT -> VARIABLE ASSIGNMENT_OPERATOR EXPRESSION
Rule 11    VARIABLE -> ID
Rule 12    VARIABLE -> ACCESS
Rule 13    ACCESS -> ID LBRACKET SEQUENCE RBRACKET
Rule 14    SEQUENCE -> SEQUENCE COMMA EXPRESSION
Rule 15    SEQUENCE -> EXPRESSION
Rule 16    VALUE -> FLOAT
Rule 17    VALUE -> INT
Rule 18    VALUE -> ID
Rule 19    VALUE -> STRING
Rule 20    VALUE -> MATRIX
Rule 21    VALUE -> ACCESS
Rule 22    MATRIX -> LBRACKET ROWS RBRACKET
Rule 23    ROWS -> ROWS SEMICOLON SEQUENCE
Rule 24    ROWS -> SEQUENCE
Rule 25    EXPRESSION -> VALUE
Rule 26    EXPRESSION -> MINUS EXPRESSION
Rule 27    EXPRESSION -> ID TRANSPOSE
Rule 28    EXPRESSION -> LPAREN EXPRESSION RPAREN TRANSPOSE
Rule 29    EXPRESSION -> LPAREN EXPRESSION RPAREN
Rule 30    EXPRESSION -> EXPRESSION PLUS EXPRESSION
Rule 31    EXPRESSION -> EXPRESSION MINUS EXPRESSION
Rule 32    EXPRESSION -> EXPRESSION TIMES EXPRESSION
Rule 33    EXPRESSION -> EXPRESSION DIVIDE EXPRESSION
Rule 34    EXPRESSION -> EXPRESSION MPLUS EXPRESSION
Rule 35    EXPRESSION -> EXPRESSION MMINUS EXPRESSION
Rule 36    EXPRESSION -> EXPRESSION MTIMES EXPRESSION
Rule 37    EXPRESSION -> EXPRESSION MDIVIDE EXPRESSION
Rule 38    EXPRESSION -> FUNCTION LPAREN EXPRESSION RPAREN
Rule 39    KEYWORD -> PRINT SEQUENCE
Rule 40    KEYWORD -> BREAK
Rule 41    KEYWORD -> CONTINUE
Rule 42    KEYWORD -> RETURN
Rule 43    RELATION -> EXPRESSION COMPARISION_OPERATOR EXPRESSION
Rule 44    BODY -> INSTRUCTION
Rule 45    BODY -> LCURLY PROGRAM RCURLY
Rule 46    IF_STATEMENT -> IF LPAREN RELATION RPAREN BODY
Rule 47    IF_STATEMENT -> IF LPAREN RELATION RPAREN BODY ELSE BODY
Rule 48    WHILE_STATEMENT -> WHILE LPAREN RELATION RPAREN BODY
Rule 49    FOR_STATEMENT -> FOR ID ASSIGN RANGE BODY
Rule 50    RANGE -> EXPRESSION COLON EXPRESSION
Rule 51    RANGE -> EXPRESSION COLON EXPRESSION COLON EXPRESSION
Rule 52    ASSIGNMENT_OPERATOR -> ASSIGN
Rule 53    ASSIGNMENT_OPERATOR -> PLUSASSIGN
Rule 54    ASSIGNMENT_OPERATOR -> MINUSASSIGN
Rule 55    ASSIGNMENT_OPERATOR -> TIMESASSIGN
Rule 56    ASSIGNMENT_OPERATOR -> DIVIDEASSIGN
Rule 57    COMPARISION_OPERATOR -> LESS
Rule 58    COMPARISION_OPERATOR -> MORE
Rule 59    COMPARISION_OPERATOR -> EQUAL
Rule 60    COMPARISION_OPERATOR -> INEQUAL
Rule 61    COMPARISION_OPERATOR -> LESSEQUAL
Rule 62    COMPARISION_OPERATOR -> MOREEQUAL
Rule 63    FUNCTION -> EYE
Rule 64    FUNCTION -> ZEROS
Rule 65    FUNCTION -> ONES

Terminals, with rules where they appear

ASSIGN               : 49 52
BREAK                : 40
COLON                : 50 51 51
COMMA                : 14
CONTINUE             : 41
DIVIDE               : 33
DIVIDEASSIGN         : 56
ELSE                 : 47
EQUAL                : 59
EYE                  : 63
FLOAT                : 16
FOR                  : 49
ID                   : 11 13 18 27 49
IF                   : 46 47
INEQUAL              : 60
INT                  : 17
LBRACKET             : 13 22
LCURLY               : 45
LESS                 : 57
LESSEQUAL            : 61
LPAREN               : 28 29 38 46 47 48
MDIVIDE              : 37
MINUS                : 26 31
MINUSASSIGN          : 54
MMINUS               : 35
MORE                 : 58
MOREEQUAL            : 62
MPLUS                : 34
MTIMES               : 36
ONES                 : 65
PLUS                 : 30
PLUSASSIGN           : 53
PRINT                : 39
RBRACKET             : 13 22
RCURLY               : 45
RETURN               : 42
RPAREN               : 28 29 38 46 47 48
SEMICOLON            : 4 23
STRING               : 19
TIMES                : 32
TIMESASSIGN          : 55
TRANSPOSE            : 27 28
WHILE                : 48
ZEROS                : 64
error                : 

Nonterminals, with rules where they appear

ACCESS               : 12 21
ASSIGNMENT           : 8
ASSIGNMENT_OPERATOR  : 10
BODY                 : 46 47 47 48 49
COMPARISION_OPERATOR : 43
EXPRESSION           : 10 14 15 26 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 43 43 50 50 51 51 51
FOR_STATEMENT        : 7
FUNCTION             : 38
IF_STATEMENT         : 5
INSTRUCTION          : 2 3 44
KEYWORD              : 9
MATRIX               : 20
PROGRAM              : 1 2 45
RANGE                : 49
RELATION             : 46 47 48
ROWS                 : 22 23
SEQUENCE             : 13 14 23 24 39
STATEMENT            : 4
VALUE                : 25
VARIABLE             : 10
WHILE_STATEMENT      : 6
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM
    (2) PROGRAM -> . PROGRAM INSTRUCTION
    (3) PROGRAM -> . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT SEMICOLON
    (5) INSTRUCTION -> . IF_STATEMENT
    (6) INSTRUCTION -> . WHILE_STATEMENT
    (7) INSTRUCTION -> . FOR_STATEMENT
    (8) STATEMENT -> . ASSIGNMENT
    (9) STATEMENT -> . KEYWORD
    (46) IF_STATEMENT -> . IF LPAREN RELATION RPAREN BODY
    (47) IF_STATEMENT -> . IF LPAREN RELATION RPAREN BODY ELSE BODY
    (48) WHILE_STATEMENT -> . WHILE LPAREN RELATION RPAREN BODY
    (49) FOR_STATEMENT -> . FOR ID ASSIGN RANGE BODY
    (10) ASSIGNMENT -> . VARIABLE ASSIGNMENT_OPERATOR EXPRESSION
    (39) KEYWORD -> . PRINT SEQUENCE
    (40) KEYWORD -> . BREAK
    (41) KEYWORD -> . CONTINUE
    (42) KEYWORD -> . RETURN
    (11) VARIABLE -> . ID
    (12) VARIABLE -> . ACCESS
    (13) ACCESS -> . ID LBRACKET SEQUENCE RBRACKET

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    ID              shift and go to state 13

    start                          shift and go to state 1
    PROGRAM                        shift and go to state 2
    INSTRUCTION                    shift and go to state 3
    STATEMENT                      shift and go to state 4
    IF_STATEMENT                   shift and go to state 5
    WHILE_STATEMENT                shift and go to state 6
    FOR_STATEMENT                  shift and go to state 7
    ASSIGNMENT                     shift and go to state 8
    KEYWORD                        shift and go to state 9
    VARIABLE                       shift and go to state 14
    ACCESS                         shift and go to state 19

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM .
    (2) PROGRAM -> PROGRAM . INSTRUCTION
    (4) INSTRUCTION -> . STATEMENT SEMICOLON
    (5) INSTRUCTION -> . IF_STATEMENT
    (6) INSTRUCTION -> . WHILE_STATEMENT
    (7) INSTRUCTION -> . FOR_STATEMENT
    (8) STATEMENT -> . ASSIGNMENT
    (9) STATEMENT -> . KEYWORD
    (46) IF_STATEMENT -> . IF LPAREN RELATION RPAREN BODY
    (47) IF_STATEMENT -> . IF LPAREN RELATION RPAREN BODY ELSE BODY
    (48) WHILE_STATEMENT -> . WHILE LPAREN RELATION RPAREN BODY
    (49) FOR_STATEMENT -> . FOR ID ASSIGN RANGE BODY
    (10) ASSIGNMENT -> . VARIABLE ASSIGNMENT_OPERATOR EXPRESSION
    (39) KEYWORD -> . PRINT SEQUENCE
    (40) KEYWORD -> . BREAK
    (41) KEYWORD -> . CONTINUE
    (42) KEYWORD -> . RETURN
    (11) VARIABLE -> . ID
    (12) VARIABLE -> . ACCESS
    (13) ACCESS -> . ID LBRACKET SEQUENCE RBRACKET

    $end            reduce using rule 1 (start -> PROGRAM .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PRINT           shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    ID              shift and go to state 13

    INSTRUCTION                    shift and go to state 20
    STATEMENT                      shift and go to state 4
    IF_STATEMENT                   shift and go to state 5
    WHILE_STATEMENT                shift and go to state 6
    FOR_STATEMENT                  shift and go to state 7
    ASSIGNMENT                     shift and go to state 8
    KEYWORD                        shift and go to state 9
    VARIABLE                       shift and go to state 14
    ACCESS                         shift and go to state 19

state 3

    (3) PROGRAM -> INSTRUCTION .

    IF              reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    WHILE           reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    FOR             reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    PRINT           reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    BREAK           reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    CONTINUE        reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    RETURN          reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    ID              reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    $end            reduce using rule 3 (PROGRAM -> INSTRUCTION .)
    RCURLY          reduce using rule 3 (PROGRAM -> INSTRUCTION .)


state 4

    (4) INSTRUCTION -> STATEMENT . SEMICOLON

    SEMICOLON       shift and go to state 21


state 5

    (5) INSTRUCTION -> IF_STATEMENT .

    IF              reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    WHILE           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    FOR             reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    PRINT           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    BREAK           reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    CONTINUE        reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    RETURN          reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    ID              reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    $end            reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    ELSE            reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)
    RCURLY          reduce using rule 5 (INSTRUCTION -> IF_STATEMENT .)


state 6

    (6) INSTRUCTION -> WHILE_STATEMENT .

    IF              reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    WHILE           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    FOR             reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    PRINT           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    BREAK           reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    CONTINUE        reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    RETURN          reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    ID              reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    $end            reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    ELSE            reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)
    RCURLY          reduce using rule 6 (INSTRUCTION -> WHILE_STATEMENT .)


state 7

    (7) INSTRUCTION -> FOR_STATEMENT .

    IF              reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    WHILE           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    FOR             reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    PRINT           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    BREAK           reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    CONTINUE        reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    RETURN          reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    ID              reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    $end            reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    ELSE            reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)
    RCURLY          reduce using rule 7 (INSTRUCTION -> FOR_STATEMENT .)


state 8

    (8) STATEMENT -> ASSIGNMENT .

    SEMICOLON       reduce using rule 8 (STATEMENT -> ASSIGNMENT .)


state 9

    (9) STATEMENT -> KEYWORD .

    SEMICOLON       reduce using rule 9 (STATEMENT -> KEYWORD .)


state 10

    (46) IF_STATEMENT -> IF . LPAREN RELATION RPAREN BODY
    (47) IF_STATEMENT -> IF . LPAREN RELATION RPAREN BODY ELSE BODY

    LPAREN          shift and go to state 22


state 11

    (48) WHILE_STATEMENT -> WHILE . LPAREN RELATION RPAREN BODY

    LPAREN          shift and go to state 23


state 12

    (49) FOR_STATEMENT -> FOR . ID ASSIGN RANGE BODY

    ID              shift and go to state 24


state 13

    (11) VARIABLE -> ID .
    (13) ACCESS -> ID . LBRACKET SEQUENCE RBRACKET

    ASSIGN          reduce using rule 11 (VARIABLE -> ID .)
    PLUSASSIGN      reduce using rule 11 (VARIABLE -> ID .)
    MINUSASSIGN     reduce using rule 11 (VARIABLE -> ID .)
    TIMESASSIGN     reduce using rule 11 (VARIABLE -> ID .)
    DIVIDEASSIGN    reduce using rule 11 (VARIABLE -> ID .)
    LBRACKET        shift and go to state 25


state 14

    (10) ASSIGNMENT -> VARIABLE . ASSIGNMENT_OPERATOR EXPRESSION
    (52) ASSIGNMENT_OPERATOR -> . ASSIGN
    (53) ASSIGNMENT_OPERATOR -> . PLUSASSIGN
    (54) ASSIGNMENT_OPERATOR -> . MINUSASSIGN
    (55) ASSIGNMENT_OPERATOR -> . TIMESASSIGN
    (56) ASSIGNMENT_OPERATOR -> . DIVIDEASSIGN

    ASSIGN          shift and go to state 27
    PLUSASSIGN      shift and go to state 28
    MINUSASSIGN     shift and go to state 29
    TIMESASSIGN     shift and go to state 30
    DIVIDEASSIGN    shift and go to state 31

    ASSIGNMENT_OPERATOR            shift and go to state 26

state 15

    (39) KEYWORD -> PRINT . SEQUENCE
    (14) SEQUENCE -> . SEQUENCE COMMA EXPRESSION
    (15) SEQUENCE -> . EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . MINUS EXPRESSION
    (27) EXPRESSION -> . ID TRANSPOSE
    (28) EXPRESSION -> . LPAREN EXPRESSION RPAREN TRANSPOSE
    (29) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (30) EXPRESSION -> . EXPRESSION PLUS EXPRESSION
    (31) EXPRESSION -> . EXPRESSION MINUS EXPRESSION
    (32) EXPRESSION -> . EXPRESSION TIMES EXPRESSION
    (33) EXPRESSION -> . EXPRESSION DIVIDE EXPRESSION
    (34) EXPRESSION -> . EXPRESSION MPLUS EXPRESSION
    (35) EXPRESSION -> . EXPRESSION MMINUS EXPRESSION
    (36) EXPRESSION -> . EXPRESSION MTIMES EXPRESSION
    (37) EXPRESSION -> . EXPRESSION MDIVIDE EXPRESSION
    (38) EXPRESSION -> . FUNCTION LPAREN EXPRESSION RPAREN
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . ID
    (19) VALUE -> . STRING
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . LBRACKET ROWS RBRACKET
    (13) ACCESS -> . ID LBRACKET SEQUENCE RBRACKET

    MINUS           shift and go to state 35
    ID              shift and go to state 36
    LPAREN          shift and go to state 37
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    STRING          shift and go to state 41
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    LBRACKET        shift and go to state 47

    SEQUENCE                       shift and go to state 32
    EXPRESSION                     shift and go to state 33
    VALUE                          shift and go to state 34
    FUNCTION                       shift and go to state 38
    MATRIX                         shift and go to state 42
    ACCESS                         shift and go to state 43

state 16

    (40) KEYWORD -> BREAK .

    SEMICOLON       reduce using rule 40 (KEYWORD -> BREAK .)


state 17

    (41) KEYWORD -> CONTINUE .

    SEMICOLON       reduce using rule 41 (KEYWORD -> CONTINUE .)


state 18

    (42) KEYWORD -> RETURN .

    SEMICOLON       reduce using rule 42 (KEYWORD -> RETURN .)


state 19

    (12) VARIABLE -> ACCESS .

    ASSIGN          reduce using rule 12 (VARIABLE -> ACCESS .)
    PLUSASSIGN      reduce using rule 12 (VARIABLE -> ACCESS .)
    MINUSASSIGN     reduce using rule 12 (VARIABLE -> ACCESS .)
    TIMESASSIGN     reduce using rule 12 (VARIABLE -> ACCESS .)
    DIVIDEASSIGN    reduce using rule 12 (VARIABLE -> ACCESS .)


state 20

    (2) PROGRAM -> PROGRAM INSTRUCTION .

    IF              reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    WHILE           reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    FOR             reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    PRINT           reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    BREAK           reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    CONTINUE        reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    RETURN          reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    ID              reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    $end            reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)
    RCURLY          reduce using rule 2 (PROGRAM -> PROGRAM INSTRUCTION .)


state 21

    (4) INSTRUCTION -> STATEMENT SEMICOLON .

    IF              reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    WHILE           reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    FOR             reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    PRINT           reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    BREAK           reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    CONTINUE        reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    RETURN          reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    ID              reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    $end            reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    ELSE            reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)
    RCURLY          reduce using rule 4 (INSTRUCTION -> STATEMENT SEMICOLON .)


state 22

    (46) IF_STATEMENT -> IF LPAREN . RELATION RPAREN BODY
    (47) IF_STATEMENT -> IF LPAREN . RELATION RPAREN BODY ELSE BODY
    (43) RELATION -> . EXPRESSION COMPARISION_OPERATOR EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . MINUS EXPRESSION
    (27) EXPRESSION -> . ID TRANSPOSE
    (28) EXPRESSION -> . LPAREN EXPRESSION RPAREN TRANSPOSE
    (29) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (30) EXPRESSION -> . EXPRESSION PLUS EXPRESSION
    (31) EXPRESSION -> . EXPRESSION MINUS EXPRESSION
    (32) EXPRESSION -> . EXPRESSION TIMES EXPRESSION
    (33) EXPRESSION -> . EXPRESSION DIVIDE EXPRESSION
    (34) EXPRESSION -> . EXPRESSION MPLUS EXPRESSION
    (35) EXPRESSION -> . EXPRESSION MMINUS EXPRESSION
    (36) EXPRESSION -> . EXPRESSION MTIMES EXPRESSION
    (37) EXPRESSION -> . EXPRESSION MDIVIDE EXPRESSION
    (38) EXPRESSION -> . FUNCTION LPAREN EXPRESSION RPAREN
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . ID
    (19) VALUE -> . STRING
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . LBRACKET ROWS RBRACKET
    (13) ACCESS -> . ID LBRACKET SEQUENCE RBRACKET

    MINUS           shift and go to state 35
    ID              shift and go to state 36
    LPAREN          shift and go to state 37
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    STRING          shift and go to state 41
    EYE             shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    LBRACKET        shift and go to state 47

    RELATION                       shift and go to state 48
    EXPRESSION                     shift and go to state 49
    VALUE                          shift and go to state 34
    FUNCTION                       shift and go to state 38
    MATRIX                         shift and go to state 42
    ACCESS                         shift and go to state 43

state 23

    (48) WHILE_STATEMENT -> WHILE LPAREN . RELATION RPAREN BODY
    (43) RELATION -> . EXPRESSION COMPARISION_OPERATOR EXPRESSION
    (25) EXPRESSION -> . VALUE
    (26) EXPRESSION -> . MINUS EXPRESSION
    (27) EXPRESSION -> . ID TRANSPOSE
    (28) EXPRESSION -> . LPAREN EXPRESSION RPAREN TRANSPOSE
    (29) EXPRESSION -> . LPAREN EXPRESSION RPAREN
    (30) EXPRESSION -> . EXPRESSION PLUS EXPRESSION
    (31) EXPRESSION -> . EXPRESSION MINUS EXPRESSION
    (32) EXPRESSION -> . EXPRESSION TIMES EXPRESSION
    (33) EXPRESSION -> . EXPRESSION DIVIDE EXPRESSION
    (34) EXPRESSION -> . EXPRESSION MPLUS EXPRESSION
    (35) EXPRESSION -> . EXPRESSION MMINUS EXPRESSION
    (36) EXPRESSION -> . EXPRESSION MTIMES EXPRESSION
    (37) EXPRESSION -> . EXPRESSION MDIVIDE EXPRESSION
    (38) EXPRESSION -> . FUNCTION LPAREN EXPRESSION RPAREN
    (16) VALUE -> . FLOAT
    (17) VALUE -> . INT
    (18) VALUE -> . ID
    (19) VALUE -> . STRING
    (20) VALUE -> . MATRIX
    (21) VALUE -> . ACCESS
    (63) FUNCTION -> . EYE
    (64) FUNCTION -> . ZEROS
    (65) FUNCTION -> . ONES
    (22) MATRIX -> . LBRACKET ROWS RBRACKET
    (13) ACCESS -> . ID LBRACKET SEQUENCE RBRACKET
